<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:contentDescription="@string/help_text"
            android:focusable="true"
            android:importantForAccessibility="yes"
            android:text="@string/help_text"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageLine"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_below="@id/textHelp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="#000000"
            android:contentDescription="@string/image_line_description"
            android:paddingStart="90dp"
            android:paddingEnd="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textHelp" />

        <!--Room Icon-->
        <LinearLayout
            android:id="@+id/RoomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/imageLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/ChooseRoom_Imageview"
                android:layout_width="107dp"
                android:layout_height="70dp"
                android:contentDescription="@string/choose_ac_description"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:src="@drawable/choose_ac" />

            <TextView
                android:id="@+id/ChooseRoomDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="15dp"
                android:text="@string/ChooseRoom_description"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/imageLine" />

        </LinearLayout>

        <!--Help Button -->
        <RelativeLayout
            android:id="@+id/HelpLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/RoomLayout">

            <ImageView
                android:id="@+id/HelpIcon_Imageview"
                android:layout_width="61dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="19dp"
                app:srcCompat="@drawable/help_icon"
                android:contentDescription="@string/choose_ac_description" />

            <TextView
                android:id="@+id/HelpDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="15dp"
                android:text="@string/Help_description"
                android:textColor="#000000" />



        </RelativeLayout>
    <!--Status Icon-->
        <LinearLayout
            android:id="@+id/StatusLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/HelpLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/Status_ImageView"
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:contentDescription="@string/choose_ac_description"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:src="@drawable/status_icon" />

            <TextView
                android:id="@+id/StatusDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="15dp"
                android:text="@string/Status_description"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/imageLine" />

        </LinearLayout>

        <!--Gear Icon-->
        <LinearLayout
            android:id="@+id/GearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/StatusLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">



            <ImageView
                android:id="@+id/Gear_Imageview"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:contentDescription="@string/choose_ac_description"
                android:paddingStart="25dp"
                android:paddingEnd="0dp"
                android:src="@drawable/ic_settings" />

            <TextView
                android:id="@+id/GearDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:text="@string/Gear_description"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/imageLine" />
        </LinearLayout>

        <!--Temperature Icon-->
        <LinearLayout
            android:id="@+id/TemperatureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/GearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/Temperature_Imageview"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/choose_ac_description"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:src="@drawable/temp_icon" />

            <TextView
                android:id="@+id/TemperatureDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="51dp"
                android:text="@string/Temperature_description"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/imageLine" />
        </LinearLayout>

        <!--Power Button Icon-->
        <LinearLayout
            android:id="@+id/PowerButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/TemperatureLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">



            <ImageView
                android:id="@+id/PowerButtonImageview"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/choose_ac_description"
                android:paddingStart="18dp"
                android:paddingEnd="0dp"
                android:src="@drawable/power_button_icon" />

            <TextView
                android:id="@+id/PowerButtonDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:text="@string/Power_description"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/imageLine" />
        </LinearLayout>

        <!--Fan Speed Icon-->
        <LinearLayout
            android:id="@+id/FanSpeedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/PowerButtonLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/FanSpeedImageview"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/choose_ac_description"
                android:paddingStart="18dp"
                android:paddingEnd="0dp"
                android:src="@drawable/fan_speed_icon" />

            <TextView
                android:id="@+id/FanSpeedDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:text="@string/FanSpeed_description"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/imageLine" />
        </LinearLayout>

        <!--Direction Icon-->
        <LinearLayout
            android:id="@+id/DirectionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/FanSpeedLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/ModeImageview"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/choose_ac_description"
                android:paddingStart="18dp"
                android:paddingEnd="0dp"
                android:src="@drawable/direction_icon" />

            <TextView
                android:id="@+id/DirectionDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:text="@string/Direction_description"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/imageLine"/>
        </LinearLayout>


        <!--Mode Icon-->
        <LinearLayout
            android:id="@+id/ModeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/DirectionLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/DirectionImageview"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/choose_ac_description"
                android:paddingStart="18dp"
                android:paddingEnd="0dp"
                android:src="@drawable/mode_icon" />

            <TextView
                android:id="@+id/ModeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:text="@string/Mode_description"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/imageLine" />
        </LinearLayout>

        <!--Eco Icon-->
        <LinearLayout
            android:id="@+id/EcoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/ModeLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/EcoImageview"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/choose_ac_description"
                android:paddingStart="18dp"
                android:paddingEnd="0dp"
                android:src="@drawable/eco_icon" />

            <TextView
                android:id="@+id/EcoDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:text="@string/Eco_description"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/imageLine" />
        </LinearLayout>

        <!--Auto Icon-->
        <LinearLayout
            android:id="@+id/AutoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/EcoLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/AutoImageview"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/choose_ac_description"
                android:paddingStart="18dp"
                android:paddingEnd="0dp"
                android:src="@drawable/auto_icon" />

            <TextView
                android:id="@+id/AutoDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:text="@string/Auto_description"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/imageLine" />
        </LinearLayout>

        <!--Sleep Icon-->
        <LinearLayout
            android:id="@+id/SleepLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/AutoLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/SleepImageview"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/choose_ac_description"
                android:paddingStart="18dp"
                android:paddingEnd="0dp"
                android:src="@drawable/sleep_icon" />

            <TextView
                android:id="@+id/SleepDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:text="@string/Sleep_description"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/imageLine" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
